# dynamic_uav_design_system

./: .env.example  .gitignore  DYNAMIC_WORKFLOW.md  IMPLEMENTATION_PLAN.md  README.md  SYSTEM_SUMMARY.md  main.py  pyproject.toml  pytest.ini  run_system.py  start.sh
agents/: __init__.py
agents/coordinator/: __init__.py  config.json  coordinator.py  dependencies.json  output_class.py  prompts.py  tools.py
backend/: main.py
backend/agents/: __init__.py  base_agent.py
backend/api/: deps.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: __init__.py  agents.py
backend/core/: config.py  database.py
backend/langgraph/: __init__.py  memory.py  state.py
backend/models/: __init__.py  agent.py  conversation.py
backend/schemas/: __init__.py  agent.py  conversation.py  upload.py
backend/services/: __init__.py  agent_factory.py  agent_lifecycle_manager.py  config_sync.py  coordinator_startup.py  dependency_manager.py  file_processor.py  langgraph_service.py  prompt_manager.py  template_validator.py
backend/templates/: agent_templates.py  coordinator_templates.py
backend/tests/: conftest.py  test_api.py  test_integration.py  test_langgraph.py  test_models.py  test_services.py
frontend/: main.py
frontend/assets/: styles.css
frontend/pages/: 1_🤖_Agent_Settings.py  2_💬_Conversations.py  3_📊_Workflow_Status.py  4_📁_File_Management.py
scripts/: init_db.py
workflows/: __init__.py  builder.py  coordinator.py  endpoints.py  langgraph.py  models.py  schemas.py
